--- a/flexbox.html
+++ b/flexbox.html
@@ -5,7 +5,7 @@
 
 <head>
   <meta charset='UTF-8' />
-  <title>Some Web Page</title>
+  <title>flex test</title>
   <link rel='stylesheet' href='styles.css' />
 </head>
 
